--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,31 @@
-.content{
-   width: 100%; 
-   height: 90vh;
-   background: url("https://www.nippon.com/es/ncommon/contents/guide-to-japan/143942/143942.jpg");
-   background-repeat: no-repeat;
-   background-attachment: fixed;
-   background-position: center top;
+.content {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.202), rgba(0, 0, 0, 0)),
+    url("https://www.nippon.com/es/ncommon/contents/guide-to-japan/143942/143942.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 40vh;
+  background-position: center top;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding: 5.5rem 0;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+@media (max-width: 576px) {
+  .content {
+    padding: 2.5rem 0;
+    background-size: 100% 35vh;
+  }
+  h1 {
+    font-size: 2.2rem;
+  }
 }
