--- a/src/components/List.css
+++ b/src/components/List.css
@@ -7,12 +7,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: fit-content;
+  width: 600px;
 }
 .tasks {
   overflow-y: auto;
-  max-height: 500px;
-  max-width: 600px;
+  width: 100%;
+  max-height: 50vh;
+  width: 600px;
 }
 .tasks::-webkit-scrollbar {
   display: none;
@@ -31,11 +32,11 @@
 }
 @media (max-width: 576px) {
   .list {
-    max-width: 98%;
+    width: 97%;
   }
   .tasks {
     overflow-y: auto;
-    height: 300px;
-    width: fit-content;
+    max-height: 30vh;
+    width: 100%;
   }
 }
