--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 2.5rem auto;
+  margin: 0 auto 2.5rem auto;
 }
 
 @media (max-width: 576px) {
