--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.202), rgba(0, 0, 0, 0)),
-    url("https://www.nippon.com/es/ncommon/contents/guide-to-japan/143942/143942.jpg");
+    url("https://www.la-provenza.es/wp-content/uploads/2011/08/provenza-ruta-lavanda.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 40vh;
