--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -24,9 +24,8 @@
   padding: 0;
 }
 
-.column.fourteen.wide.divider:last-child {
-  border-bottom: none;
-  padding: 0;
+.column.fourteen.wide.divider:first-child {
+  display: none;
 }
 
 @media (max-width: 576px) {
