--- a/src/components/List.css
+++ b/src/components/List.css
@@ -12,7 +12,7 @@
 .tasks {
   overflow-y: auto;
   width: 100%;
-  max-height: 50vh;
+  max-height: 40vh;
   width: 600px;
 }
 .tasks::-webkit-scrollbar {
@@ -29,6 +29,7 @@
   padding: 0.5rem 1rem;
   color: #323338;
   opacity: 0.7;
+  cursor: pointer;
 }
 @media (max-width: 576px) {
   .list {
